fixed media query! bigger max-width
turns out 575 was too small of a max-width. 700 worked.

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,6 @@ section {
 
 h1 {
     padding-top: 5%;
-    max-width: 600px;
 }
 
 #profilePic {
@@ -82,7 +81,7 @@ h6 {
     margin-top: 5%;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   h1, #introP {
     text-align: center;
   }
